Don't crash on abort before actually starting to receive

BUG:102407
CCMAIL:shin@shoegazed.org

svn path=/trunk/kdeextragear-2/konversation/; revision=401140